modifiche al menù e hero

--- a/discipline.html
+++ b/discipline.html
@@ -214,7 +214,7 @@
       <h1>Apo San Carlo</h1>
       <nav>
         <ul>
-          <li><a href="prova.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="chisiamo.html">Chi siamo</a></li>
           <li><a href="discipline.html" class="active">Discipline</a></li>
           <li><a href="eventi.html">Eventi</a></li>
