--- a/chisiamo.html
+++ b/chisiamo.html
@@ -268,7 +268,7 @@
             <h1>Apo San Carlo</h1>
             <nav>
                 <ul>
-                    <li><a href="prova.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="chisiamo.html" class="active">Chi siamo</a></li>
                     <li><a href="discipline.html">Discipline</a></li>
                     <li><a href="eventi.html">Eventi</a></li>
